--- a/Classifiers/Day_2_Basic_Features_256_1e-3_swish_mult2_50E_normedweighted_rot_cart_star.ipynb
+++ b/Classifiers/Day_2_Basic_Features_256_1e-3_swish_mult2_50E_normedweighted_rot_cart_star.ipynb
@@ -949,42 +949,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scoreTest(ensemble, weights, features, cut, name):\n",
-    "    testData = pandas.read_csv('../Data/test.csv')\n",
-    "    with open(dirLoc + 'inputPipe.pkl', 'r') as fin:\n",
-    "        inputPipe = pickle.load(fin)\n",
+    "def scoreTest(ensemble, weights):\n",
+    "    testData = h5py.File(dirLoc + 'testing.hdf5', \"r+\")\n",
+    "    batchEnsemblePredict(ensemble, weights, testData, ensembleSize=10, verbose=1)\n",
     "\n",
-    "    testData['pred_class'] = ensemblePredict(inputPipe.transform(testData[features].values.astype('float32')), ensemble, weights)    \t\n",
+    "def saveTest(cut, name):\n",
+    "    testData = h5py.File(dirLoc + 'testing.hdf5', \"r+\")\n",
+    "    \n",
+    "    data = pandas.DataFrame()\n",
+    "    data['EventId'] = getFeature('EventId', testData)\n",
+    "    data['pred_class'] = getFeature('pred', testData)\n",
+    "    \n",
+    "    data['Class'] = 'b'\n",
+    "    data.loc[data.pred_class >= cut, 'Class'] = 's'\n",
     "\n",
-    "    testData['Class'] = 'b'\n",
-    "    testData.loc[testData.pred_class >= cut, 'Class'] = 's'\n",
+    "    data.sort_values(by=['pred_class'], inplace=True)\n",
+    "    data['RankOrder']=range(1, len(data)+1)\n",
+    "    data.sort_values(by=['EventId'], inplace=True)\n",
     "\n",
-    "    testData.sort_values(by=['pred_class'], inplace=True)\n",
-    "    testData['RankOrder']=range(1, len(testData)+1)\n",
-    "    testData.sort_values(by=['EventId'], inplace=True)\n",
-    "\n",
-    "    testData.to_csv(dirLoc + name + '_test.csv', columns=['EventId', 'RankOrder', 'Class'], index=False)"
+    "    print dirLoc + name + '_test.csv'\n",
+    "    data.to_csv(dirLoc + name + '_test.csv', columns=['EventId', 'RankOrder', 'Class'], index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicting batch 1 out of 10\n",
+      "Prediction took 0.000163474815542s per sample\n",
+      "\n",
+      "Predicting batch 2 out of 10\n",
+      "Prediction took 0.000166778820211s per sample\n",
+      "\n",
+      "Predicting batch 3 out of 10\n",
+      "Prediction took 0.000168825162541s per sample\n",
+      "\n",
+      "Predicting batch 4 out of 10\n",
+      "Prediction took 0.000161903455041s per sample\n",
+      "\n",
+      "Predicting batch 5 out of 10\n",
+      "Prediction took 0.000163382400166s per sample\n",
+      "\n",
+      "Predicting batch 6 out of 10\n",
+      "Prediction took 0.000170009639046s per sample\n",
+      "\n",
+      "Predicting batch 7 out of 10\n",
+      "Prediction took 0.000160603124445s per sample\n",
+      "\n",
+      "Predicting batch 8 out of 10\n",
+      "Prediction took 0.000165696165778s per sample\n",
+      "\n",
+      "Predicting batch 9 out of 10\n",
+      "Prediction took 0.000202145433426s per sample\n",
+      "\n",
+      "Predicting batch 10 out of 10\n",
+      "Prediction took 0.000164518490705s per sample\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "scoreTest(ensemble, weights, classTrainFeatures, 0.24044741690158844, 'Day_2_Basic_Features_256_1e-3_swish_mult2_200E_normedweighted')"
+    "scoreTest(ensemble, weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../Data/Day_2_Basic_Features_256_1e-3_swish_mult2_200E_normedweighted_rot_cart_test.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "saveTest(0.93784874677658081, 'Day_2_Basic_Features_256_1e-3_swish_mult2_200E_normedweighted_rot_cart')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!kaggle competitions submit -c higgs-boson -f ../Data/Day_2_Basic_Features_256_1e-3_swish_mult2_200E_normedweighted_rot_cart_test.csv -m\"Day2\""
+   ]
   }
  ],
  "metadata": {
