--- a/Classifiers/Day_2_Basic_Features_256_1e-3_swish_mult2_50E_normedweighted_rot.ipynb
+++ b/Classifiers/Day_2_Basic_Features_256_1e-3_swish_mult2_50E_normedweighted_rot.ipynb
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!kaggle competitions submit -c higgs-boson -f Data/Day_2_Basic_Features_256_1e-3_swish_mult2_50E_normedweighted_rot_test.csv -m\"Day2\""
+    "!kaggle competitions submit -c higgs-boson -f ../Data/Day_2_Basic_Features_256_1e-3_swish_mult2_50E_normedweighted_rot_test.csv -m\"Day2\""
    ]
   }
  ],
