--- a/Data_Processing/1_Data_Import.ipynb
+++ b/Data_Processing/1_Data_Import.ipynb
@@ -18,9 +18,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/giles/anaconda2/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "/home/giles/anaconda2/lib/python2.7/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
       "  from pandas.core import datetools\n",
-      "Using Theano backend.\n"
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
@@ -333,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,9 +372,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/giles/cernbox/ML_Tools/Transformations/HEP_Proc.py:20: RuntimeWarning: overflow encountered in sinh\n",
+      "  inData[particle + '_pz'] = pt*np.sinh(eta)\n"
+     ]
+    }
+   ],
    "source": [
     "convertData(trainingData)\n",
     "convertData(testingData)"
@@ -380,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +411,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -446,17 +457,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainFeatures = [x for x in train.columns if 'gen' not in x and x != 'EventId']\n",
     "print len(trainFeatures)"
@@ -485,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,38 +543,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['DER_mass_MMC', 'DER_mass_transverse_met_lep', 'DER_mass_vis', 'DER_pt_h', 'DER_deltaeta_jet_jet', 'DER_mass_jet_jet', 'DER_prodeta_jet_jet', 'DER_deltar_tau_lep', 'DER_pt_tot', 'DER_sum_pt', 'DER_pt_ratio_lep_tau', 'DER_met_phi_centrality', 'DER_lep_eta_centrality', 'PRI_met_pt', 'PRI_met_sumet', 'PRI_jet_num', 'PRI_jet_all_pt', 'PRI_tau_px', 'PRI_tau_py', 'PRI_tau_pz', 'PRI_lep_px', 'PRI_lep_pz', 'PRI_jet_leading_px', 'PRI_jet_leading_py', 'PRI_jet_leading_pz', 'PRI_jet_subleading_px', 'PRI_jet_subleading_py', 'PRI_jet_subleading_pz', 'PRI_met_px', 'PRI_met_py']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print classTrainFeatures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "     steps=[('normIn', StandardScaler(copy=True, with_mean=True, with_std=True))])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "inputPipe, outputPipe = getPreProcPipes(normIn=True)\n",
     "inputPipe.fit(train[classTrainFeatures].values.astype('float32'))"
@@ -589,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,69 +636,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running train\n",
-      "Saving fold: 0 of 20001 events\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/giles/anaconda2/lib/python2.7/site-packages/pandas/core/indexing.py:537: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving fold: 1 of 20001 events\n",
-      "Saving fold: 2 of 20001 events\n",
-      "Saving fold: 3 of 20000 events\n",
-      "Saving fold: 4 of 20000 events\n",
-      "Saving fold: 5 of 20000 events\n",
-      "Saving fold: 6 of 20000 events\n",
-      "Saving fold: 7 of 19999 events\n",
-      "Saving fold: 8 of 19999 events\n",
-      "Saving fold: 9 of 19999 events\n",
-      "Running val\n",
-      "Saving fold: 0 of 5000 events\n",
-      "Saving fold: 1 of 5000 events\n",
-      "Saving fold: 2 of 5000 events\n",
-      "Saving fold: 3 of 5000 events\n",
-      "Saving fold: 4 of 5000 events\n",
-      "Saving fold: 5 of 5000 events\n",
-      "Saving fold: 6 of 5000 events\n",
-      "Saving fold: 7 of 5000 events\n",
-      "Saving fold: 8 of 5000 events\n",
-      "Saving fold: 9 of 5000 events\n",
-      "Running testing\n",
-      "Saving fold: 0 of 55000 events\n",
-      "Saving fold: 1 of 55000 events\n",
-      "Saving fold: 2 of 55000 events\n",
-      "Saving fold: 3 of 55000 events\n",
-      "Saving fold: 4 of 55000 events\n",
-      "Saving fold: 5 of 55000 events\n",
-      "Saving fold: 6 of 55000 events\n",
-      "Saving fold: 7 of 55000 events\n",
-      "Saving fold: 8 of 55000 events\n",
-      "Saving fold: 9 of 55000 events\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prepareSample(train, 'train', inputPipe, True)\n",
     "prepareSample(val, 'val', inputPipe, False)\n",
@@ -746,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
