--- a/Data_Processing/1_Data_Import.ipynb
+++ b/Data_Processing/1_Data_Import.ipynb
@@ -332,7 +332,8 @@
    "outputs": [],
    "source": [
     "rotate = True\n",
-    "cartesian = True"
+    "cartesian = True\n",
+    "regression = True"
    ]
   },
   {
@@ -347,6 +348,7 @@
     "    inData['PRI_jet_leading_phi'] = deltaphi(inData['PRI_lep_phi'], inData['PRI_jet_leading_phi'])\n",
     "    inData['PRI_jet_subleading_phi'] = deltaphi(inData['PRI_lep_phi'], inData['PRI_jet_subleading_phi'])\n",
     "    inData['PRI_met_phi'] = deltaphi(inData['PRI_lep_phi'], inData['PRI_met_phi'])\n",
+    "    inData['PRI_lep_phi'] = 0\n",
     "    \n",
     "def convertData(inData):\n",
     "    '''Pass data through conversions and drop uneeded columns'''\n",
