Icarus last syn

--- a/Classifiers/Day_7_fixed.ipynb
+++ b/Classifiers/Day_7_fixed.ipynb
@@ -1006,7 +1006,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def foldAMSScan(inData, N=10):\n",
+    "    kf = StratifiedKFold(n_splits=N, shuffle=True)\n",
+    "    folds = kf.split(inData, inData['gen_target'])\n",
+    "    bests = []\n",
+    "    for i, (train, test) in enumerate(folds):\n",
+    "        bests.append(amsScan(inData.iloc[test], (np.sum(inData[(inData['gen_target'] == 1)]['gen_weight']), np.sum(inData[(inData['gen_target'] == 0)]['gen_weight'])))[1])\n",
+    "        print \"Fold {}, best AMS {} at cut of {}. Total weights Signal:Bkg. {}:{}\".format(i, bests[-1][1], bests[-1][0],\n",
+    "                                                                                          np.sum(inData.iloc[test][inData.gen_target == 1]['gen_weight']),\n",
+    "                                                                                          np.sum(inData.iloc[test][inData.gen_target == 0]['gen_weight']))\n",
+    "    print \"Mean cut\", np.average([x[0] for x in bests], weights=[1/x[1] for x in bests]), \"mean AMS\", np.average([x[1] for x in bests], weights=[1/x[1] for x in bests])\n",
+    "    return bests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {
     "scrolled": false
    },
@@ -1015,48 +1034,100 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.9836652278900146, 1.76253919422326]\n",
-      "Fold 0, best AMS 1.76253919422 at cut of 0.98366522789. Total weights Signal:Bkg. 14.0410270691:8331.92382812\n"
+      "[0.9568625688552856, 1.9314919212582524]\n",
+      "Fold 0, best AMS 1.93149192126 at cut of 0.956862568855. Total weights Signal:Bkg. 14.0879707336:8211.14746094\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../Modules/Basics.py:61: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  np.sum(inData.iloc[test][inData.gen_target == 1]['gen_weight']),\n",
-      "../Modules/Basics.py:62: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  np.sum(inData.iloc[test][inData.gen_target == 0]['gen_weight']))\n"
+      "/home/giles/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:8: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  \n",
+      "/home/giles/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:9: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  if __name__ == '__main__':\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.9858368635177612, 2.206815312778541]\n",
-      "Fold 1, best AMS 2.20681531278 at cut of 0.985836863518. Total weights Signal:Bkg. 13.764623642:8207.21875\n",
-      "[0.9110752940177917, 1.6335646401704798]\n",
-      "Fold 2, best AMS 1.63356464017 at cut of 0.911075294018. Total weights Signal:Bkg. 13.6688327789:8229.74511719\n",
-      "[0.9072890877723694, 1.6209046369931206]\n",
-      "Fold 3, best AMS 1.62090463699 at cut of 0.907289087772. Total weights Signal:Bkg. 14.001285553:8185.7734375\n",
-      "[0.987063467502594, 1.7946986398050708]\n",
-      "Fold 4, best AMS 1.79469863981 at cut of 0.987063467503. Total weights Signal:Bkg. 14.1940937042:8098.13378906\n",
-      "[0.9792848229408264, 2.9280326116792326]\n",
-      "Fold 5, best AMS 2.92803261168 at cut of 0.979284822941. Total weights Signal:Bkg. 13.1332130432:8214.47265625\n",
-      "[0.9855181574821472, 2.5002370685407826]\n",
-      "Fold 6, best AMS 2.50023706854 at cut of 0.985518157482. Total weights Signal:Bkg. 13.5280761719:8208.76269531\n",
-      "[0.9830944538116455, 1.8105678690580287]\n",
-      "Fold 7, best AMS 1.81056786906 at cut of 0.983094453812. Total weights Signal:Bkg. 14.4205474854:8180.50634766\n",
-      "[0.9555087685585022, 2.1676006017171026]\n",
-      "Fold 8, best AMS 2.16760060172 at cut of 0.955508768559. Total weights Signal:Bkg. 14.0720062256:7977.86621094\n",
-      "[0.9236070513725281, 1.7253061579139999]\n",
-      "Fold 9, best AMS 1.72530615791 at cut of 0.923607051373. Total weights Signal:Bkg. 14.1277322769:8157.88720703\n",
-      "Mean cut 0.9569128835804165 mean AMS 1.9449397990658235\n"
+      "[0.9694336652755737, 2.853514296535758]\n",
+      "Fold 1, best AMS 2.85351429654 at cut of 0.969433665276. Total weights Signal:Bkg. 13.2644100189:8078.71435547\n",
+      "[0.9183012843132019, 1.5097842938973467]\n",
+      "Fold 2, best AMS 1.5097842939 at cut of 0.918301284313. Total weights Signal:Bkg. 13.2919034958:8067.33691406\n",
+      "[0.9618738293647766, 1.7846391794837593]\n",
+      "Fold 3, best AMS 1.78463917948 at cut of 0.961873829365. Total weights Signal:Bkg. 13.6949253082:8312.59863281\n",
+      "[0.9693795442581177, 2.338791278728295]\n",
+      "Fold 4, best AMS 2.33879127873 at cut of 0.969379544258. Total weights Signal:Bkg. 14.0400314331:8233.64550781\n",
+      "[0.9805371761322021, 1.9621260855972165]\n",
+      "Fold 5, best AMS 1.9621260856 at cut of 0.980537176132. Total weights Signal:Bkg. 14.5095424652:8169.92724609\n",
+      "[0.9826875329017639, 2.0242752252854523]\n",
+      "Fold 6, best AMS 2.02427522529 at cut of 0.982687532902. Total weights Signal:Bkg. 13.4619636536:8275.5\n",
+      "[0.9367393851280212, 1.554131797098036]\n",
+      "Fold 7, best AMS 1.5541317971 at cut of 0.936739385128. Total weights Signal:Bkg. 14.4351139069:8403.30078125\n",
+      "[0.9608435034751892, 2.163318632435079]\n",
+      "Fold 8, best AMS 2.16331863244 at cut of 0.960843503475. Total weights Signal:Bkg. 14.2502269745:7984.98925781\n",
+      "[0.9855132699012756, 2.377860634033714]\n",
+      "Fold 9, best AMS 2.37786063403 at cut of 0.985513269901. Total weights Signal:Bkg. 13.9153499603:8055.12792969\n",
+      "Mean cut 0.9646706523055166 mean AMS 1.9808512631673851\n"
      ]
     }
    ],
    "source": [
     "bests = foldAMSScan(valframe, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.9568625688552856, 1.9314919212582524],\n",
+       " [0.9694336652755737, 2.853514296535758],\n",
+       " [0.9183012843132019, 1.5097842938973467],\n",
+       " [0.9618738293647766, 1.7846391794837593],\n",
+       " [0.9693795442581177, 2.338791278728295],\n",
+       " [0.9805371761322021, 1.9621260855972165],\n",
+       " [0.9826875329017639, 2.0242752252854523],\n",
+       " [0.9367393851280212, 1.554131797098036],\n",
+       " [0.9608435034751892, 2.163318632435079],\n",
+       " [0.9855132699012756, 2.377860634033714]]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9593958466668531\n",
+      "0.9646706523055166\n",
+      "0.9760185175046745\n",
+      "0.9548498536842881\n"
+     ]
+    }
+   ],
+   "source": [
+    "print np.average([x[0] for x in bests], weights=[1/x[1] for x in bests])\n",
+    "print np.average([x[0] for x in bests], weights=[x[1] for x in bests])\n",
+    "print np.average([x[0] for x in bests], weights=[1.685564257934902-x[1] for x in bests])\n",
+    "print np.average([x[0] for x in bests], weights=[1/np.abs(1.685564257934902-x[1]) for x in bests])"
    ]
   },
   {
@@ -1109,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1121,49 +1192,24 @@
     }
    ],
    "source": [
-    "saveTest(0.9569128835804165, 'Day_7')"
+    "saveTest(0.9625362587280859, 'Day_7')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\r\n",
-      "  File \"/home/giles/anaconda2/bin/kaggle\", line 11, in <module>\r\n",
-      "    sys.exit(main())\r\n",
-      "  File \"/home/giles/anaconda2/lib/python2.7/site-packages/kaggle/cli.py\", line 18, in main\r\n",
-      "    out = args.func(**command_args)\r\n",
-      "  File \"/home/giles/anaconda2/lib/python2.7/site-packages/kaggle/api/kaggle_api_extended.py\", line 66, in competitionSubmit\r\n",
-      "    urlResult = self.competitions_submissions_url(file_name = os.path.basename(file), content_length = os.path.getsize(file), last_modified_date_utc = int(os.path.getmtime(file) * 1000))\r\n",
-      "  File \"/home/giles/anaconda2/lib/python2.7/site-packages/kaggle/api/kaggle_api.py\", line 670, in competitions_submissions_url\r\n",
-      "    (data) = self.competitions_submissions_url_with_http_info(content_length, last_modified_date_utc, **kwargs)  # noqa: E501\r\n",
-      "  File \"/home/giles/anaconda2/lib/python2.7/site-packages/kaggle/api/kaggle_api.py\", line 757, in competitions_submissions_url_with_http_info\r\n",
-      "    collection_formats=collection_formats)\r\n",
-      "  File \"/home/giles/anaconda2/lib/python2.7/site-packages/kaggle/api_client.py\", line 318, in call_api\r\n",
-      "    _preload_content, _request_timeout)\r\n",
-      "  File \"/home/giles/anaconda2/lib/python2.7/site-packages/kaggle/api_client.py\", line 149, in __call_api\r\n",
-      "    _request_timeout=_request_timeout)\r\n",
-      "  File \"/home/giles/anaconda2/lib/python2.7/site-packages/kaggle/api_client.py\", line 361, in request\r\n",
-      "    body=body)\r\n",
-      "  File \"/home/giles/anaconda2/lib/python2.7/site-packages/kaggle/rest.py\", line 272, in POST\r\n",
-      "    body=body)\r\n",
-      "  File \"/home/giles/anaconda2/lib/python2.7/site-packages/kaggle/rest.py\", line 225, in request\r\n",
-      "    raise ApiException(http_resp=r)\r\n",
-      "kaggle.rest.ApiException: (401)\r\n",
-      "Reason: Unauthorized\r\n",
-      "HTTP response headers: HTTPHeaderDict({'Content-Length': '37', 'Set-Cookie': 'ARRAffinity=a4491c4997833d3ba8f463815b87223517e23a18775a9e2cc57d79051f60da03;Path=/;HttpOnly;Domain=www.kaggle.com', 'X-MiniProfiler-Ids': '[\"46cb9664-49fe-4e23-82b9-8205122a9f56\",\"a4f1509d-9258-405e-8fb0-f6d2123dfad1\",\"eb54b071-8bdc-41b1-bb99-6dfefaaf9f40\",\"70ed1000-71f0-4991-b7d8-6cd11cee143a\",\"32f297a8-8e38-4de2-a671-113e7c79d0cb\",\"4f03eacf-f51d-4177-9a90-98b24b642239\"]', 'Cache-Control': 'private', 'Date': 'Tue, 20 Mar 2018 12:11:49 GMT', 'X-Frame-Options': 'SAMEORIGIN', 'Content-Type': 'application/json; charset=utf-8'})\r\n",
-      "HTTP response body: {\"code\":401,\"message\":\"Unauthorized\"}\r\n",
-      "\r\n"
+      "Successfully submitted to Higgs Boson Machine Learning Challenge"
      ]
     }
    ],
    "source": [
-    "!kaggle competitions submit -c higgs-boson -f ../Data/Day_7_test.csv -m\"Day_7 fixed mean\""
+    "!kaggle competitions submit -c higgs-boson -f ../Data/Day_7_test.csv -m\"Day_7 inverse 50\""
    ]
   },
   {
