Day8 refkection tests

--- a/Classifiers/Day4/Day_4_Basic_Features_256_1e-3_swish_mult2_60E_normedweighted_rot_cart_999->-1.ipynb
+++ b/Classifiers/Day4/Day_4_Basic_Features_256_1e-3_swish_mult2_60E_normedweighted_rot_cart_999->-1.ipynb
@@ -834,6 +834,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.204517646498928e-05"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.mean([3.1161864856847734e-05,\n",
+    "3.128688850896817e-05,\n",
+    "3.147601043282404e-05,\n",
+    "3.161946646030573e-05,\n",
+    "3.229816988939985e-05,\n",
+    "3.234597163735096e-05,\n",
+    "3.251997507651489e-05,\n",
+    "3.252830723450606e-05,\n",
+    "3.2554815061365846e-05,\n",
+    "3.266029549180944e-05])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
